--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,23 +21,25 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
     
-    - name: Replace Secrets in HTML
+    - name: Create deployment directory
+      run: mkdir -p deployment
+    
+    - name: Copy and replace secrets
       env:
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
       run: |
-        # 디버깅을 위한 출력
-        echo "Replacing secrets in index.html..."
-        echo "SUPABASE_URL exists: ${{ secrets.SUPABASE_URL != '' }}"
-        echo "SUPABASE_ANON_KEY exists: ${{ secrets.SUPABASE_ANON_KEY != '' }}"
+        # index.html 복사
+        cp index.html deployment/index.html
         
-        # sed 명령어 실행
+        # Secrets 치환
+        cd deployment
         sed -i "s|YOUR_SUPABASE_PROJECT_URL|${SUPABASE_URL}|g" index.html
         sed -i "s|YOUR_SUPABASE_ANON_KEY|${SUPABASE_ANON_KEY}|g" index.html
         
         # 치환 확인
-        echo "Checking if replacement worked..."
-        grep -n "SUPABASE_URL" index.html | head -5
+        echo "=== 치환 후 내용 확인 ==="
+        grep -A 2 -B 2 "SUPABASE_URL" index.html || echo "SUPABASE_URL not found"
     
     - name: Setup Pages
       uses: actions/configure-pages@v4
@@ -45,7 +47,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: '.'
+        path: './deployment'
     
     - name: Deploy to GitHub Pages
       id: deployment
